--- a/[For Participants] image_classifier.ipynb
+++ b/[For Participants] image_classifier.ipynb
@@ -326,7 +326,7 @@
     "## Predict image class\n",
     "Send our image through the network. Look at the output shape.\n",
     "\n",
-    "Why is one of the dimensions 1000?"
+    "**Why is one of the dimensions 1000?**"
    ]
   },
   {
