--- a/[SOLUTION] image_classifier.ipynb
+++ b/[SOLUTION] image_classifier.ipynb
@@ -396,7 +396,7 @@
     "## Predict image class\n",
     "Send our image through the network. Look at the output shape.\n",
     "\n",
-    "Why is one of the dimensions 1000?"
+    "**Why is one of the dimensions 1000?**"
    ]
   },
   {
@@ -538,9 +538,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Class: 0 with 0% certainty\n",
-      "Predicted Class: 0 with 0% certainty\n",
-      "Predicted Class: 0 with 0% certainty\n"
+      "Predicted Class: gibbon, Hylobates lar with 8.9% certainty\n",
+      "Predicted Class: chimpanzee, chimp, Pan troglodytes with 11.4% certainty\n",
+      "Predicted Class: gorilla, Gorilla gorilla with 88.6% certainty\n"
      ]
     }
    ],
@@ -551,7 +551,7 @@
     "    row_max, row_idx = torch.max(pred, dim=1)\n",
     "    col_max, col_idx = torch.max(row_max, dim=1)\n",
     "    predicted_class = class_index[0, row_idx[0, col_idx], col_idx]\n",
-    "    print(f\"Predicted Class: {0} with {0}% certainty\")"
+    "    print(f\"Predicted Class: {labels[predicted_class]} with {round(float(col_max[0]),3)*100}% certainty\")"
    ]
   },
   {
